--- a/app/components/stats/TimeStat.styl
+++ b/app/components/stats/TimeStat.styl
@@ -2,8 +2,8 @@
     specialfont()
 
     &__value
-        font-size: 4rem
-        line-height: 4rem
+        font-size: 2.5rem
+        line-height: 2.5rem
 
         @media (min-width: $sm-threshold)
             font-size: 7rem
